[gd_scene load_steps=4 format=3 uid="uid://88kaltflhgi8"]

[ext_resource type="Theme" uid="uid://cldijs2xqwyow" path="res://Themes/light_blue_theme.tres" id="1_sdsob"]
[ext_resource type="Script" uid="uid://l1cx6c7a6db5" path="res://Scenes/Story_Popups/story_create_popup.gd" id="2_5nbf6"]
[ext_resource type="Texture2D" uid="uid://b2mi7v0dcwpf3" path="res://Assets/Button.png" id="2_ub58k"]

[node name="StoryCreatePopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sdsob")
script = ExtResource("2_5nbf6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -192.0
offset_right = 256.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Create Story"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RequiredLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "*Required"

[node name="Title" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Title"]
layout_mode = 2
text = "*Title:"

[node name="Spacer" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/Title"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="TitleLine" type="LineEdit" parent="ColorRect/MarginContainer/VBoxContainer/Title"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Add Text Here"

[node name="Spacer2" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/Title"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Author" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AuthorLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Author"]
layout_mode = 2
size_flags_horizontal = 0
text = "Author:"

[node name="AuthorLine" type="LineEdit" parent="ColorRect/MarginContainer/VBoxContainer/Author"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Add Text Here"

[node name="Spacer2" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/Author"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Description" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DescLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Description"]
layout_mode = 2
text = "Description:"

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer/Description"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="DescriptionBox" type="TextEdit" parent="ColorRect/MarginContainer/VBoxContainer/Description/MarginContainer"]
layout_mode = 2
placeholder_text = "Add Text Here"
wrap_mode = 1

[node name="Buttons" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 80

[node name="ConfirmButton" type="TextureButton" parent="ColorRect/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_ub58k")

[node name="ConfirmLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Buttons/ConfirmButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.5
offset_right = 20.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
text = "Confirm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CancelButton" type="TextureButton" parent="ColorRect/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_ub58k")

[node name="CancelLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Buttons/CancelButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.5
offset_right = 20.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
text = "Cancel"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Buttons/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Buttons/CancelButton" to="." method="_on_cancel_button_pressed"]
